@@ -4,6 +4,7 @@
 - Improved: [#18192] Tycoon Park has been added Extras tab.
 - Improved: [#18214] Competition scenarios have received their own section.
 - Improved: [#18250] Added modern style file and folder pickers on Windows.
+- Improved: [#18332] Allow Inverted Roller Coaster to draw boosters.
 - Improved: [#18422] Allow adding images to music objects.
 - Improved: [#18428] [Plugin] Add widget description interfaces to documentation.
 - Change: [#17998] Show cursor when using inverted mouse dragging.
